--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "ODg1OTI2NzY1OTcxNzgzNjgx.YTuJmA.ufMv2UoOouYYPrVmRq7SLmkygLQ",
+  "token": "",
   "owners": [],
   "prefix": "=",
   "status": "DM Me for Support",
